# hmnet_mod

./: .gitignore  pyproject.toml  test_VQ_VAE.ipynb
experiments/segmentation/config/: hmnet_B3_custom.py
experiments/segmentation/scripts/: eval_seg.py  test.py  test.sh  train.py  train.sh  train_distrib.sh
hmnet/models/base/backbone/: hmnet.py  latent_VQ_VAE.py  latent_memory.py  vit.py
hmnet/models/segmentation/: __init__.py  hmsegVQ.py
